...
    navigateToDetail: (Long) -> Unit,
    onFav: (id: Long) -> Unit,
) {
    LazyColumn(
        contentPadding = PaddingValues(16.dp),
        verticalArrangement = Arrangement.spacedBy(8.dp),
        modifier = modifier.testTag("BrawlList")
    ) {
        item {
            Spacer(modifier = modifier.padding(top = 75.dp))
        }
        items(brawlFav, key = { it.id }) { data ->
            BrawlHero(
...
