...

                    is UiState.Success -> {
                        if (uiState.data.isEmpty()) {
                            Text(
                                modifier = modifier
                                    .align(Alignment.Center)
                                    .testTag("fav_error"),
                                text = stringResource(id = R.string.error_noitem),

                                )
                        } else {
                            FavContent(
                                brawlFav = uiState.data,
...
